--- a/colonelgraff.html
+++ b/colonelgraff.html
@@ -10,7 +10,7 @@
   <meta property="twitter:image:width" content="800"/>
   <meta property="twitter:image:height" content="400"/>
   <meta property="og:title" content="ColonelGraffRBX (@ColonelGraffRBX) on X"/>
-  <meta property="og:description" content="I like kids."/>
+  <meta property="og:description" content="WESTBOUND 2 RELEASE"/>
   <meta property="og:site_name" content="Twitter / X"/>
   <style>
     body {
@@ -18,36 +18,81 @@
       margin: 0;
       padding: 0;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-color: #f5f8fa;
+      background-color: #2C2F33;
+    }
+    .container {
+      background-color: #23272A;
+      border: 1px solid #7289DA;
+      border-radius: 10px;
+      padding: 15px;
+      width: 500px;
+      color: white;
+    }
+    .header {
+      display: flex;
+      align-items: center;
+    }
+    .header img {
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      margin-right: 10px;
+    }
+    .header .username {
+      font-weight: bold;
+      color: #7289DA;
+    }
+    .header .time {
+      margin-left: 5px;
+      color: #72767D;
     }
     .content {
-      text-align: center;
+      margin-top: 10px;
+      background-color: #2C2F33;
+      border-left: 4px solid #7289DA;
+      padding: 10px;
+      border-radius: 5px;
+    }
+    .content .title {
+      font-weight: bold;
+      color: #7289DA;
+      margin-bottom: 5px;
+    }
+    .content .message {
+      color: #DCDDDE;
     }
     .footer {
       display: flex;
       align-items: center;
-      margin-top: 20px;
-      font-size: 14px;
-      color: #657786;
+      margin-top: 10px;
+      font-size: 12px;
+      color: #72767D;
     }
     .footer img {
-      width: 20px;
-      height: 20px;
-      margin-right: 8px;
+      width: 16px;
+      height: 16px;
+      margin-right: 5px;
     }
   </style>
 </head>
 <body>
-  <div class="content">
-    <p>I like kids.</p>
-  </div>
-  <div class="footer">
-    <img src="https://abs.twimg.com/icons/apple-touch-icon-192x192.png" alt="Twitter Logo">
-    <span>Twitter • 07/30/2022 4:58 PM</span>
+  <div class="container">
+    <div class="header">
+      <img src="https://pbs.twimg.com/profile_images/378800000123456789/abcde1234_normal.jpeg" alt="Profile Picture">
+      <span class="username">ColonelGraffRBX</span>
+      <span class="time">@ColonelGraffRBX • 08/02/2024 4:58 PM</span>
+    </div>
+    <div class="content">
+      <div class="title">ColonelGraff (@ColonelGraffRBX) on X</div>
+      <div class="message">WESTBOUND 2 RELEASE</div>
+    </div>
+    <div class="footer">
+      <img src="https://abs.twimg.com/icons/apple-touch-icon-192x192.png" alt="Twitter Logo">
+      <span>Twitter • 08/02/2024 4:58 PM</span>
+    </div>
   </div>
 </body>
 </html>
